# hottoh_api

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  config.ini
.github/: dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yml  codeql-analysis.yml  labeler.yml  release.yml
src/: main.rs
src/hottoh/: config.rs  hottoh_const.rs  hottoh_structs.rs  http_api.rs  logger.rs  mod.rs  shared_struct.rs  tcp_client.rs  tcp_client_structs.rs
