[package]
name = "hottoh_api"
version = "0.1.0"
edition = "2021"

[dependencies]
crc-any = "2.5.0"
thiserror = "1.0"
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.38"
ctrlc = "3.4"
flexi_logger = "0.30.1"
config = "0.15"
log = "0.4.22"
strum = "0.26"
strum_macros = "0.27"
utoipa = { version = "4.2.0", features = ["actix_extras", "preserve_order", "preserve_path_order"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["actix-web"] }
