[package]
name = "hottoh_api"
version = "0.1.0"
edition = "2021"

[dependencies]
crc-any = "2.5.0"
thiserror = "2.0.12"
actix-web = "4.10"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
chrono = "0.4.40"
ctrlc = "3.4.6"
flexi_logger = "0.30.1"
config = "0.15.11"
log = "0.4.22"
strum = "0.27"
strum_macros = "0.27"
utoipa = { version = "5.3.1", features = ["actix_extras", "preserve_order", "preserve_path_order"] }
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }
